styles/main.css
@import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');

@font-face {
    font-family: 'Vintage_font';
    src: url(../fonts/Vintage_font.otf) format('opentype');
}

@font-face {
    font-family: 'Marker_font';
    src: url(../fonts/Marker_font.otf) format('opentype');
}

:root {
    --face-switch: 180deg;
    --back-switch: 0deg;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

*::selection {
    background-color: rgba(63, 102, 107, 0.8);
}

html {
    overflow-x: hidden;
}

body {
    display: none;
    font-family: 'Martian Mono', monospace;
    font-weight: 600;
    background-color: #fff;
    overflow-x: hidden;
}

.vignette {
    position: absolute;
    top: 0;
    left: 0;

    width: 100vw;
    height: 100vh;

    background: radial-gradient(circle at center, transparent 30%, rgba(0, 0, 0, 0.4) 80%, rgba(0, 0, 0, 0.7) 100%);
    z-index: 100;
    pointer-events: none;
}

.slides_container {
    width: 100vw;
    height: 100vh;

    display: flex;
    flex-direction: row;

    overflow: hidden;

    z-index: 1;
}

.strip {
    position: relative;
    width: var(--part);
    height: 100%;
}

.strip {
    transform-style: preserve-3d;
    font-size: calc(var(--part) * 0.9);
}

.face,
.back {
    position: absolute;
    width: var(--part);
    height: 100%;
    padding-top: 1em;
    transition: transform 2s;
    backface-visibility: hidden;
    text-align: center;
    z-index: 2;
    border-right: 1px solid rgba(127, 127, 127, 0.2);
    border-left: 1px solid rgba(127, 127, 127, 0.2);
}

.face {
    /* background-color: rgb(30, 30, 30); */
    /* rgb(25, 25, 25) */

    background-color: rgb(37, 52, 48);
    color: white;
    transform: rotate3d(0, 1, 0, 180deg);
}

.back {
    /* background-color: rgb(250, 250, 250); */
    /* rgb(245, 245, 245) */

    background-color: rgb(214, 232, 227);
}

.describer {
    position: absolute;
    bottom: 3vh;
    right: 2em;
    z-index: 101;
    text-align: right;
    mix-blend-mode: difference;
    font-size: calc(var(--part) * 0.2);
}

.describer p,
.describer a {
    text-decoration: none;
    margin-top: 0.5em;
    color: #16be78;
}

#pause {
    position: absolute;
    bottom: 3vh;
    left: calc(var(--part) * 0.1);
    width: calc(var(--part) * 0.8);
    z-index: 3;
    filter: invert(50%) blur(3px);
    transition: filter 0.8s, transform 0.8s;
}

@media screen and (orientation: portrait) {
    .slides_container,
    .vignette {
        height: 55vw;
    }

    #pause {
        top: 47vw;
    }

    .describer {
        top: 50vw;
        font-size: calc(var(--part) * 0.2);
    }
}

@media screen and (max-width: 768px) and (orientation: portrait) {
}

#pause:hover {
    filter: invert(50%);
    transform: scale(0.9);
}

@keyframes face-slide {
    0% {
        transform: rotate3d(0, 1, 0, calc(var(--face-switch)));
    }

    50% {
        transform: rotate3d(0, 1, 0, calc(var(--face-switch) - 210deg));
    }

    70% {
        transform: rotate3d(0, 1, 0, calc(var(--face-switch) - 160deg));
    }

    85% {
        transform: rotate3d(0, 1, 0, calc(var(--face-switch) - 195deg));
    }

    95% {
        transform: rotate3d(0, 1, 0, calc(var(--face-switch) - 168deg));
    }

    100% {
        transform: rotate3d(0, 1, 0, calc(var(--face-switch) - 180deg));
    }
}

@keyframes back-slide {
    0% {
        transform: rotate3d(0, 1, 0, calc(var(--back-switch)));
    }

    50% {
        transform: rotate3d(0, 1, 0, calc(var(--back-switch) - 210deg));
    }

    70% {
        transform: rotate3d(0, 1, 0, calc(var(--back-switch) - 160deg));
    }

    85% {
        transform: rotate3d(0, 1, 0, calc(var(--back-switch) - 195deg));
    }

    95% {
        transform: rotate3d(0, 1, 0, calc(var(--back-switch) - 168deg));
    }

    100% {
        transform: rotate3d(0, 1, 0, calc(var(--back-switch) - 180deg));
    }
}

.week {
    display: flex;
    flex-direction: row;
    width: 100%;
    text-align: center;
    overflow: hidden;
    background-color: #d6e8e3;
    border-top: calc(var(--part) * 0.1) double rgb(10, 100, 100);
    border-bottom: calc(var(--part) * 0.1) double rgb(10, 100, 100);
}

.week div:not(:last-child) {
    border-right: calc(var(--part) * 0.1) double rgb(10, 100, 100);
}

.week div {
    width: 14.28%;
    font-size: calc(var(--part) * 0.5);
    color: rgb(10, 100, 100);
    text-decoration: line-through;
}

main {
    position: relative;
    width: 100vw;
    height: auto;
    display: grid;
    grid-template-columns:
        var(--part_dbl) var(--part_dbl) var(--part_dbl) var(--part_dbl) var(--part_dbl) var(--part_dbl)
        var(--part_dbl) var(--part_dbl);
    grid-template-rows:
        var(--part_dbl) var(--part_dbl) var(--part_dbl) var(--part_dbl) var(--part_dbl) var(--part_dbl) var(--part_dbl)
        var(--part_dbl) var(--part_dbl) var(--part_dbl) var(--part_dbl) var(--part_dbl);

    padding-top: 10vh;

    justify-content: start;
    align-content: start;

    background-color: #c9d0db;
    background-image: url(../images/content_images/paper_1.png);
    background-size: cover;
    overflow: hidden;
}

.main_item {
    position: relative;
    display: flex;
    flex-direction: column;
    height: var(--part_dbl);
    overflow: visible;
    color: rgb(15, 15, 15);
    opacity: 0.85;
}

#horse {
    grid-area: 1 / 2 / 3 / 5;
    width: calc(var(--part) * 6.2);
    transform: translate(5%, 12%);
    transform: translate(1%, 16%);
}

#missing {
    grid-area: 5 / 7 / 11 / 9;
}

#missing_img {
    width: calc(var(--part) * 4.3);
    transform: rotate(6deg) translate(-25%, -18%);
    filter: contrast(160%);
}

#line_1 {
    position: absolute;
    left: 50%;
    top: calc(var(--part) * 0.4);
    transform: translate(-50.5%, -50%);
    width: 56vw;
}

#stamp_0 {
    grid-area: 1 / 8 / 2/ 9;
    width: calc(var(--part) * 2);
    transform: translate(19%, -34%);
}
/* ... */

